--- a/packages/client-prototype/src/fx/Blotter/FxBlotterPanel.module.css
+++ b/packages/client-prototype/src/fx/Blotter/FxBlotterPanel.module.css
@@ -21,10 +21,6 @@
   border-bottom-color: var(--accent);
 }
 
-.spacer {
-  flex: 1;
-}
-
 .tools {
   display: flex;
   align-items: center;
